recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:8: error: not found: value len
    tree(steps-1,len*shrink,angle,shrink)
                 ^