recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  
  if(steps > 0){
    
    current(steps)
    forward(length)
    right(angle)
    tree(steps-1,len*shrink,angle,shrink)
    
    
  }
  
}